adding the css file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<head>
 		<meta charset=”utf-8”>
 		<title>loan application</title>
+		<link rel="stylesheet" type="text/css" href="main.css">
+    	<link href="https://fonts.googleapis.com/css?family=Mystery+Quest" rel="stylesheet">
 	</head>
 	<body>
 		<h2> loan application </h2>
